spade-tests/src/snapshots/spade_tests__ast_lowering__extern_pipeline_methods_produce_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct X {}
impl X {
    // NOTE: This error should change once
    // pipelines as methods are added
    extern pipeline(1) x(self, x: bool) -> bool;
}


error: Methods cannot be `extern`
  ┌─ testinput:5:12
  │
5 │     extern pipeline(1) x(self, x: bool) -> bool;
  │            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │
  = help: Consider defining a free-standing function
